--- a/.htaccess
+++ b/.htaccess
@@ -421,7 +421,7 @@ Options -MultiViews
 # ----------------------------------------------------------------------
 
 # You can add custom pages to handle 500 or 403 pretty easily, if you like.
-ErrorDocument 404 http://localhost/gdlwebcamp/404.html
+ErrorDocument 404 http://192.168.0.111/gdlwebcamp/404.html
 
 
 
